Actualizo notebook EDA

--- a/notebooks/5- Proyecto_eda.ipynb
+++ b/notebooks/5- Proyecto_eda.ipynb
@@ -733,7 +733,7 @@
     }
    ],
    "source": [
-    "# Exploro la variable \"adult\"\n",
+    "# Exploro la variable \"adult\" para ver su relevancia\n",
     "\n",
     "# Cuento las ocurrencias de cada valor en la columna 'adult'\n",
     "conteo_adult = df['adult'].value_counts()\n",
@@ -778,7 +778,7 @@
    "source": [
     "# Exploro la variable \"popularity\" en busca de outliers o patrones\n",
     "\n",
-    "# Graficar la distribución de la columna 'popularity'\n",
+    "# Grafico la distribución de la columna 'popularity'\n",
     "plt.figure(figsize=(10, 6))\n",
     "df['popularity'].plot(kind='hist', bins=30, color='skyblue', edgecolor='black')\n",
     "plt.title('Distribución de Popularity')\n",
@@ -805,18 +805,20 @@
     }
    ],
    "source": [
-    "# Preparar los datos para la regresión lineal\n",
-    "X = df.index.values.reshape(-1, 1)  # Usar el índice como la variable independiente\n",
-    "y = df['popularity'].values.reshape(-1, 1)  # Usar 'popularity' como la variable dependiente\n",
+    "# Hago una regresión lineal para ver la distribución de las pelis en base a la columna \"popularity\"\n",
     "\n",
-    "# Crear y ajustar el modelo de regresión lineal\n",
+    "# Preparo los datos para la regresión lineal\n",
+    "X = df.index.values.reshape(-1, 1)  # Uso el índice como la variable independiente\n",
+    "y = df['popularity'].values.reshape(-1, 1)  # Uso 'popularity' como la variable dependiente\n",
+    "\n",
+    "# Creo y ajusto el modelo de regresión lineal\n",
     "modelo = LinearRegression()\n",
     "modelo.fit(X, y)\n",
     "\n",
-    "# Predecir los valores usando el modelo\n",
+    "# Predigo los valores\n",
     "y_pred = modelo.predict(X)\n",
     "\n",
-    "# Graficar los datos y la línea de regresión\n",
+    "# Grafico los datos y la línea de regresión\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(x=df.index, y=df['popularity'], color='blue', label='Actual')\n",
     "plt.plot(df.index, y_pred, color='red', label='Línea de Regresión')\n",
@@ -966,14 +968,15 @@
     }
    ],
    "source": [
+    "# Expoloro la relación entre las variables \"popularity\" y \"vote average\"\n",
     "\n",
-    "# Seleccionar las columnas \"title\", \"popularity\" y \"vote_average\"\n",
+    "# Selecciono las columnas \"title\", \"popularity\" y \"vote_average\"\n",
     "columnas_seleccionadas = df[['title', 'popularity', 'vote_average','vote_count',]]\n",
     "\n",
-    "# Ordenar el dataframe por \"popularity\" en orden descendente\n",
+    "# Ordeno el dataframe por \"popularity\" en orden descendente\n",
     "df_ordenado = columnas_seleccionadas.sort_values(by='vote_average', ascending=False)\n",
     "\n",
-    "# Mostrar el dataframe ordenado\n",
+    "# Veo el dataframe ordenado\n",
     "df_ordenado"
    ]
   },
@@ -1001,8 +1004,6 @@
     }
    ],
    "source": [
-    "# Expoloro la relación entre las variables \"popularity\" y \"vote average\"\n",
-    "\n",
     "\n",
     "# Grafico la relación entre 'popularity' y 'vote_average'\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -1042,7 +1043,7 @@
     }
    ],
    "source": [
-    "# Filtro el dataset para incluir solo películas con vote_count > 10\n",
+    "# Para eliminar outliers y anomalías, filtro el dataset para incluir solo películas con vote_count > 10\n",
     "df_filtrado = df[df['vote_count'] > 10]\n",
     "\n",
     "# Grafico la relación entre 'popularity' y 'vote_average' para los datos filtrados\n",
@@ -1083,18 +1084,20 @@
     }
    ],
    "source": [
-    "# Preparar los datos para la regresión lineal\n",
-    "X = df_filtrado['vote_average'].values.reshape(-1, 1)  # Usar 'vote_average' como la variable independiente\n",
-    "y = df_filtrado['popularity'].values.reshape(-1, 1)  # Usar 'popularity' como la variable dependiente\n",
+    "# Hago la regresión lineal de nuevo pero con los datos filtrados\n",
     "\n",
-    "# Crear y ajustar el modelo de regresión lineal\n",
+    "# Preparo los datos para la regresión lineal\n",
+    "X = df_filtrado['vote_average'].values.reshape(-1, 1)  # Uso 'vote_average' como la variable independiente\n",
+    "y = df_filtrado['popularity'].values.reshape(-1, 1)  # Uso 'popularity' como la variable dependiente\n",
+    "\n",
+    "# Creo y ajusto el modelo de regresión lineal\n",
     "modelo = LinearRegression()\n",
     "modelo.fit(X, y)\n",
     "\n",
-    "# Predecir los valores usando el modelo\n",
+    "# Predigo los valores usando el modelo\n",
     "y_pred = modelo.predict(X)\n",
     "\n",
-    "# Graficar los datos y la línea de regresión\n",
+    "# Grafico los datos y la línea de regresión\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(x='vote_average', y='popularity', data=df_filtrado, color='blue', label='Actual')\n",
     "plt.plot(df_filtrado['vote_average'], y_pred, color='red', label='Línea de Regresión')\n",
@@ -1105,7 +1108,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# Calcular la correlación entre 'vote_average' y 'popularity' para los datos filtrados\n",
+    "# Calculo de nuevo la correlación entre 'vote_average' y 'popularity' para los datos filtrados\n",
     "correlacion = df_filtrado['vote_average'].corr(df_filtrado['popularity'])\n",
     "print(f\"La correlación entre Vote Average y Popularity (Vote Count > 10) es: {correlacion}\")"
    ]
@@ -2127,12 +2130,12 @@
     }
    ],
    "source": [
-    "# Nubde de palabras\n",
+    "# Nube de palabras\n",
     "\n",
-    "# Combinar todos los títulos de películas en una sola cadena de texto\n",
+    "# Combino todos los títulos de películas en una sola cadena de texto\n",
     "titulos = ' '.join(df['title'].dropna().values)\n",
     "\n",
-    "# Contar las palabras\n",
+    "# Cuento las palabras\n",
     "palabras = titulos.split()\n",
     "conteo_palabras = Counter(palabras)\n",
     "\n",
@@ -2156,20 +2159,23 @@
     }
    ],
    "source": [
-    "# Filtrar las palabras que aparecen más de 10 veces\n",
+    "# Filtro las palabras que aparecen más de 10 veces\n",
     "conteo_filtrado = {palabra: conteo for palabra, conteo in conteo_palabras.items() if conteo > 10}\n",
     "\n",
     "\n",
-    "# Crear la nube de palabras\n",
+    "# Creo la nube de palabras\n",
     "plt.figure(figsize=(30, 15))\n",
     "plt.axis('off')\n",
     "\n",
-    "# Añadir las palabras más comunes con diferentes tamaños de fuente\n",
+    "# Añado las palabras más comunes con diferentes tamaños de fuente\n",
     "for i, (palabra, conteo) in enumerate(conteo_filtrado.items()):\n",
     "    plt.text(i % 10, i // 10, palabra, fontsize=min(conteo*5, 50), ha='center', va='center', alpha=1.0)\n",
     "\n",
     "plt.title('Nube de Palabras de Títulos de Películas (Palabras Repetidas Más de 10 Veces)')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Había obtenido una nube pero con todas las palabras superpuestas y no se entendía nada. Fui modificando tamaño y otras cosas\n",
+    "# pero no logré tener una buena representación de la nube"
    ]
   }
  ],
